--- a/styles/Team.module.css
+++ b/styles/Team.module.css
@@ -24,46 +24,46 @@
   color: #ffffff;
   opacity: 0.75;
 }
-.redialGredient {
-  background: radial-gradient(
-    40.45% 40.45% at 50% 46.16%,
-    rgba(1, 9, 80, 0.9) 3.12%,
-    rgba(14, 17, 32, 0) 100%
+
+.gredient {
+  background: -webkit-linear-gradient(
+    bottom,
+    rgba(0, 0, 0, 0.98) 0%,
+    rgba(13, 13, 38, 0.16) 22%,
+    rgba(6, 12, 57, 0.49) 42%,
+    rgba(8, 13, 53, 0.39) 65%,
+    rgba(0, 0, 0, 0.01) 85%
   );
-}
-.gradient {
-  /* background-image: url(../public/gredient-1.png); */
-  background: radial-gradient(
-    40.45% 40.45% at 50% 46.16%,
-    rgba(1, 9, 80, 0.9) 3.12%,
-    rgba(14, 17, 32, 0) 100%
+  background: -o-linear-gradient(
+    bottom,
+    rgba(0, 0, 0, 0.98) 0%,
+    rgba(13, 13, 38, 0.16) 22%,
+    rgba(6, 12, 57, 0.49) 42%,
+    rgba(8, 13, 53, 0.39) 65%,
+    rgba(0, 0, 0, 0.01) 85%
   );
-  position: absolute;
-  left: -545px;
-  right: 0;
-  width: 1551px;
-  height: 749px;
-  /* left: 0; */
-  top: 66px;
-  /* top: 3924px; */
-  z-index: -1;
-}
-@media only screen and (max-width: 768px) {
-  .gradient {
-    background: radial-gradient(
-      40.45% 40.45% at 50% 46.16%,
-      rgba(1, 9, 80, 0.9) 3.12%,
-      rgba(14, 17, 32, 0) 100%
-    );
-    position: absolute;
-    right: 0;
-    width: 500px;
-    height: 1061px;
-    left: -76px;
-    top: -100px;
-    /* top: 3924px; */
-    overflow: hidden;
-    overflow-x: hidden;
-    z-index: -1;
-  }
+  background: -ms-linear-gradient(
+    bottom,
+    rgba(0, 0, 0, 0.98) 0%,
+    rgba(13, 13, 38, 0.16) 22%,
+    rgba(6, 12, 57, 0.49) 42%,
+    rgba(8, 13, 53, 0.39) 65%,
+    rgba(0, 0, 0, 0.01) 85%
+  );
+  background: -moz-linear-gradient(
+    bottom,
+    rgba(0, 0, 0, 0.98) 0%,
+    rgba(13, 13, 38, 0.16) 22%,
+    rgba(6, 12, 57, 0.49) 42%,
+    rgba(8, 13, 53, 0.39) 65%,
+    rgba(0, 0, 0, 0.01) 85%
+  );
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.98) 0%,
+    rgba(13, 13, 38, 0.16) 22%,
+    rgba(6, 12, 57, 0.49) 42%,
+    rgba(8, 13, 53, 0.39) 65%,
+    rgba(0, 0, 0, 0.01) 85%
+  );
 }
