--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -45,7 +45,10 @@
     rgba(0, 0, 0, 0.24) 100%
   );
 }
-@media only screen and (max-width: 768px) {
-  .gredient {
-  }
+.heading {
+  background-image: url(../public/pattern\ .png);
+  height: 231vh;
+  background-repeat: no-repeat;
+  z-index: 100;
+  width: 100%;
 }
