--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,54 +1,101 @@
+/* .gredient {
+  background: radial-gradient(
+    82.45% 87.45% at 28% -0.84%,
+    rgba(1, 9, 80, 0.9) 3.12%,
+    rgba(14, 17, 32, 0) 100%
+  );
+} */
+
 .gredient {
-  background: -webkit-linear-gradient(
-    297deg,
-    rgba(6, 11, 62, 0.63) 0%,
-    rgba(2, 9, 72, 0.85) 20%,
-    rgba(5, 13, 57, 0.55) 48%,
-    rgba(8, 13, 42, 0.24) 68%,
-    rgba(0, 0, 0, 0.24) 88%,
-    rgba(0, 0, 0, 0.24) 100%
+  width: 100wh;
+  height: 90vh;
+  color: #fff;
+  background: radial-gradient(
+    46.45% 35.45% at 50% 46.16%,
+    rgba(1, 9, 80, 0.9) 3.12%,
+    rgba(14, 17, 32, 0) 100%
   );
-  background: -o-linear-gradient(
-    297deg,
-    rgba(6, 11, 62, 0.63) 0%,
-    rgba(2, 9, 72, 0.85) 20%,
-    rgba(5, 13, 57, 0.55) 48%,
-    rgba(8, 13, 42, 0.24) 68%,
-    rgba(0, 0, 0, 0.24) 88%,
-    rgba(0, 0, 0, 0.24) 100%
-  );
-  background: -ms-linear-gradient(
-    297deg,
-    rgba(6, 11, 62, 0.63) 0%,
-    rgba(2, 9, 72, 0.85) 20%,
-    rgba(5, 13, 57, 0.55) 48%,
-    rgba(8, 13, 42, 0.24) 68%,
-    rgba(0, 0, 0, 0.24) 88%,
-    rgba(0, 0, 0, 0.24) 100%
-  );
-  background: -moz-linear-gradient(
-    297deg,
-    rgba(6, 11, 62, 0.63) 0%,
-    rgba(2, 9, 72, 0.85) 20%,
-    rgba(5, 13, 57, 0.55) 48%,
-    rgba(8, 13, 42, 0.24) 68%,
-    rgba(0, 0, 0, 0.24) 88%,
-    rgba(0, 0, 0, 0.24) 100%
-  );
-  background: linear-gradient(
-    153deg,
-    rgba(6, 11, 62, 0.63) 0%,
-    rgba(2, 9, 72, 0.85) 20%,
-    rgba(5, 13, 57, 0.55) 48%,
-    rgba(8, 13, 42, 0.24) 68%,
-    rgba(0, 0, 0, 0.24) 88%,
-    rgba(0, 0, 0, 0.24) 100%
-  );
+  background-size: 400% 400%;
+  -webkit-animation: Gradient 15s ease infinite;
+  -moz-animation: Gradient 15s ease infinite;
+  animation: Gradient 15s ease infinite;
 }
+
 .heading {
   background-image: url(../public/pattern\ .png);
   height: 231vh;
   background-repeat: no-repeat;
   z-index: 100;
   width: 100%;
+}
+
+.floatRightt {
+  animation: floatRightt 4.5s ease-in-out infinite;
+}
+.floatRightt {
+  animation: floatLeftt 4.5s ease-in-out infinite;
+  width: 220px;
+  height: 220px;
+  -webkit-filter: blur(120px);
+  filter: blur(120px);
+  position: absolute;
+  top: -280px;
+  left: 315px;
+  border-radius: 50%;
+  background-color: blue;
+  z-index: 1;
+}
+.floatLeftt {
+  animation: floatLeftt 4.5s ease-in-out infinite;
+}
+
+@keyframes floatRightt {
+  from {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(30vw, 15vw);
+  }
+  to {
+    transform: translate(0, 0);
+  }
+}
+
+.floatLeftt {
+  width: 125px;
+  height: 220px;
+  filter: blur(120px);
+  -webkit-filter: blur(120px);
+  position: absolute;
+  top: -214px;
+  right: 120px;
+  border-radius: 50%;
+  background-color: blue;
+  z-index: 1;
+}
+
+@keyframes floatLeftt {
+  from {
+    transform: translate(0, 0);
+  }
+  50% {
+    transform: translate(-44vw, -10vw);
+  }
+  to {
+    transform: translate(0, 0);
+  }
+}
+@media only screen and (max-width: 768px) {
+  .floatRightt {
+    width: 221px;
+    height: 207px;
+    filter: blur(85px);
+    position: absolute;
+    top: -277px;
+    left: 200px;
+    right: 0;
+    border-radius: 50%;
+    background-color: blue;
+    z-index: 1;
+  }
 }
