--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -2,11 +2,13 @@
   font-size: 15px;
   line-height: 24px;
   color: #e6e6e6;
+  text-align: justify;
 }
 .description {
   font-size: 16px;
   line-height: 24px;
   color: rgba(174, 175, 180, 0.5);
+  text-align: justify;
 }
 
 .line {
@@ -15,4 +17,12 @@
   background: #e1eaf7;
   opacity: 0.15;
   margin: 18px 0;
+}
+.bg {
+  background-image: url(../public/pttrn.png);
+  width: 100%;
+  height: auto;
+  background-repeat: no-repeat;
+
+  background-position: center;
 }
