--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -71,18 +71,22 @@
     font-family: "Satoshi-Black";
     font-style: normal;
     font-weight: 900;
-    font-size: 96px;
-    line-height: 92px;
-    letter-spacing: -8px;
+    font-size: 51px;
+    line-height: 56px;
+    letter-spacing: -1px;
     color: #ffffff;
   }
   .subHeading {
     width: 100%;
-    font-size: 20px;
+    font-size: 11px;
     line-height: 30px;
     text-align: justify;
   }
   .btn {
     border-radius: 5px;
+    font-size: 12px;
+  }
+  .w-\[75\%\] {
+    width: 100%;
   }
 }
