--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -36,35 +36,19 @@
   padding: 20px 0px;
 }
 .inputGroup {
-  /* Form */
-  justify-content: space-between;
-  box-sizing: border-box;
-
-  /* Auto layout */
   display: flex;
-  flex-direction: row;
   align-items: center;
-  padding: 8px 8px 8px 24px;
-  gap: 10px;
   background: rgba(47, 50, 65, 0.5);
   border: 1px solid #34384c;
   border-radius: 12px;
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  flex-grow: 0;
 }
 .btn {
   /* Auto layout */
   display: flex;
-  flex-direction: row;
-  justify-content: center;
   align-items: center;
   padding: 12px 24px;
-  gap: 10px;
-  width: 81px;
+  width: auto;
   height: 47px;
-
   background: linear-gradient(
     265.56deg,
     #1b66f9 -0.27%,
@@ -72,9 +56,13 @@
     #004bdb 98.59%
   );
   border-radius: 8px;
-
-  /* Inside auto layout */
   flex: none;
   order: 1;
   flex-grow: 0;
+}
+@media screen and (max-width: 768px) {
+  .inputGroup {
+    padding: 1px 0px 1px 7px;
+    gap: 0px;
+  }
 }
