--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,8 +1,13 @@
 .CardStyle {
   background: rgba(47, 50, 65, 0.5);
+  -webkit-backdrop-filter: blur(6px);
   backdrop-filter: blur(6px);
   margin: 0 auto;
   border-radius: 12px;
+  width: 285px;
+  height: 329px;
+  display: grid;
+  align-items: center;
 }
 .cardIcon {
   height: 91px;
@@ -15,4 +20,10 @@
   backdrop-filter: blur(7px);
   display: flex;
   align-items: center;
+}
+@media only screen and (max-width: 768px) {
+  .CardStyle {
+    width: 327px;
+    height: 372px;
+  }
 }
