--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -1,14 +1,56 @@
+@font-face {
+  font-family: "Satoshi-Light";
+  src: url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff2")
+      format("woff2"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff")
+      format("woff"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.ttf")
+      format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Satoshi-Medium";
+  src: url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Medium.woff2")
+      format("woff2"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-MediumItalic.woff")
+      format("woff"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Medium.ttf")
+      format("truetype");
+  font-weight: 500;
+  font-display: swap;
+  font-style: italic;
+}
+@font-face {
+  font-family: "Satoshi-Bold";
+  src: url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Bold.woff2")
+      format("woff2"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Bold.woff")
+      format("woff"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Bold.ttf")
+      format("truetype");
+  font-weight: 700;
+  font-display: swap;
+  font-style: normal;
+}
 .title {
-  font-size: 15px;
+  font-family: "Satoshi-Bold";
+  font-size: 20px;
   line-height: 24px;
+  height: 2rem;
   color: #e6e6e6;
-  text-align: justify;
+  font-weight: 700;
+  margin: 24px 0px;
 }
 .description {
+  font-family: "Satoshi-Medium";
+  font-style: normal;
+  font-weight: 500;
   font-size: 16px;
   line-height: 24px;
+
   color: rgba(174, 175, 180, 0.5);
-  text-align: justify;
 }
 
 .line {
@@ -25,4 +67,10 @@
   background-repeat: no-repeat;
 
   background-position: center;
+}
+
+@media only screen and (max-width: 768) {
+  .title {
+    margin: 12px 0;
+  }
 }
