--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,6 +40,18 @@
   font-display: swap;
   font-style: normal;
 }
+@font-face {
+  font-family: "Satoshi-Regular";
+  src: url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff2")
+      format("woff2"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.woff")
+      format("woff"),
+    url("../public/Satoshi_Complete/Fonts/WEB/fonts/Satoshi-Regular.ttf")
+      format("truetype");
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
 body {
   background-color: #000000;
   font-family: "Satoshi-Medium";
@@ -105,4 +117,31 @@ body {
     #004bdb 98.59%
   );
   border-radius: 8px;
+}
+p.cardWallet {
+  margin-right: 18px;
+}
+/* =====Features Section===== */
+.features_title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 110%;
+  color: #ffffff;
+}
+.footer_border {
+  border-top: 1px solid #5f6064;
+  margin-top: 2rem;
+}
+.footer_text {
+  font-family: "Satoshi-Regular";
+  font-size: 16px;
+  line-height: 24px;
+
+  color: #aeafb4;
+}
+@media only screen and (max-width: 768px) {
+  .features_title {
+    font-size: 32px;
+    line-height: 32.5px;
+  }
 }
