--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,6 +58,16 @@ body {
   color: #e6e6e6;
   overflow-x: hidden;
 }
+button {
+  background: linear-gradient(
+    265.56deg,
+    #2962ff -0.27%,
+    #1e68f6 -0.26%,
+    #0047d0 98.59%
+  );
+  font-size: 14px;
+  font-family: "Satoshi-Medium";
+}
 .title {
   color: rgba(174, 175, 180, 0.5);
   font-family: "Satoshi-Bold";
@@ -76,9 +86,6 @@ body {
   font-size: 35px;
   text-align: center;
   color: #e6e6e6;
-}
-.hero2 {
-  background-image: url(../components//images/DecorativeLine.png);
 }
 /* ====Team Header Section Gredient ========== */
 
@@ -139,9 +146,30 @@ p.cardWallet {
 
   color: #aeafb4;
 }
+
 @media only screen and (max-width: 768px) {
   .features_title {
     font-size: 32px;
     line-height: 32.5px;
   }
+}
+/* for test */
+.card_group {
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 20px;
+  grid-row-gap: 20px;
+}
+
+.card1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+.card2 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.card3 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.card4 {
+  grid-area: 1 / 3 / 3 / 5;
 }
