--- a/styles/globals.css
+++ b/styles/globals.css
@@ -155,10 +155,10 @@ p.cardWallet {
 }
 /* for test */
 .card_group {
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 285px);
   grid-template-rows: repeat(2, 1fr);
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
+  grid-column-gap: 0;
+  grid-row-gap: 63px;
 }
 
 .card1 {
@@ -171,5 +171,10 @@ p.cardWallet {
   grid-area: 1 / 2 / 2 / 3;
 }
 .card4 {
-  grid-area: 1 / 3 / 3 / 5;
+  grid-area: auto;
+}
+@media only screen and (max-width: 768px) and (min-width: 71024px) {
+  .card_group {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
